--- a/app/src/main/res/layout/movie_grid_item.xml
+++ b/app/src/main/res/layout/movie_grid_item.xml
@@ -1,42 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    app:cardCornerRadius="8dp"
-    android:layout_margin="8dp"
-    android:layout_height="325dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:background="#121737"
-        android:layout_height="match_parent">
+    <data>
+        <variable
+            name="movie"
+            type="com.example.recovery.data.model.movie.Movie" />
 
-        <ImageView
-            android:id="@+id/grid_movieImage"
-            android:layout_width="175dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    </data>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        app:cardCornerRadius="8dp"
+        android:layout_margin="8dp"
+        android:layout_height="325dp">
 
-        <TextView
-            android:id="@+id/grid_movie_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
-            app:layout_constraintTop_toBottomOf="@id/grid_movieImage"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:background="#121737"
+            android:layout_height="match_parent">
 
-
+            <ImageView
+                android:id="@+id/grid_movieImage"
+                android:layout_width="175dp"
+                android:layout_height="262.5dp"
+                android:scaleType="centerCrop"
+                android:layout_margin="8dp"
+                glideLoad="@{movie.poster_path}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
+            <TextView
+                android:id="@+id/grid_movie_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="8dp"
+                releaseTitle="@{movie}"
+                app:layout_constraintTop_toBottomOf="@id/grid_movieImage"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</layout>
