--- a/app/src/main/res/layout/detail_item.xml
+++ b/app/src/main/res/layout/detail_item.xml
@@ -1,50 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="125dp"
-    android:layout_height="wrap_content"
-    android:elevation="8dp"
-    app:cardCornerRadius="8dp"
-    android:layout_marginHorizontal="8dp"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    <data>
+        <variable
+            name="movie"
+            type="com.example.recovery.data.model.movie.Movie" />
+        <variable
+            name="cast"
+            type="com.example.recovery.data.model.cast.Cast" />
 
-    <ImageView
-        android:id="@+id/detail_item_image"
+    </data>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="125dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/color2"
-        android:layout_marginHorizontal="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:elevation="8dp"
+        app:cardCornerRadius="8dp"
+        android:layout_marginHorizontal="8dp">
 
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:background="@drawable/gradient"
-        android:layout_gravity="bottom"
-        app:layout_constraintTop_toTopOf="@id/detail_item_image"
-        app:layout_constraintBottom_toBottomOf="@id/detail_item_image"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/detail_item_image"
+                android:layout_width="125dp"
+                android:layout_height="170dp"
+                android:scaleType="centerCrop"
+                glideLoad="@{movie != null ? movie.poster_path :cast.profile_path}"
+                android:backgroundTint="@color/color2"
+                android:layout_marginHorizontal="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:background="@drawable/gradient"
+                android:layout_gravity="bottom"
+                app:layout_constraintTop_toTopOf="@id/detail_item_image"
+                app:layout_constraintBottom_toBottomOf="@id/detail_item_image"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
 
+            <TextView
+                android:id="@+id/detail_item_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_margin="8dp"
+                android:text="@{movie != null ? ``:cast.name}"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/detail_item_image" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <TextView
-        android:id="@+id/detail_item_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:layout_margin="8dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/detail_item_image"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</layout>
