--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,95 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#040929"
-    tools:context=".ui.home.fragment.HomeFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:id="@+id/home_body"
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/now_playing_movie"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#040929"
-            android:layout_marginVertical="8dp"/>
+        android:layout_height="match_parent"
+        android:background="#040929"
+        tools:context=".ui.home.fragment.HomeFragment">
 
         <TextView
             android:id="@+id/no_internet_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="300dp"
             android:text="No internet connection, please try again later."
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold"
             android:visibility="gone"
-            tools:visibility="visible" />
+            tools:visibility="visible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-        <TextView
-            android:id="@+id/upcoming_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:text="Up Coming Movies"
-            android:layout_margin="8dp"
-            />
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/upcoming_rv"
+
+        <ScrollView
+            android:id="@+id/scroll_home"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#040929"
-            android:layout_marginVertical="8dp"
-            />
-        <TextView
-            android:id="@+id/popular_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:text="Popular Movies"
-            android:layout_margin="8dp"
-            />
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/popularmovies"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#040929"
-            android:layout_marginVertical="8dp"
-            />
-        <TextView
-            android:id="@+id/toprated_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:text="Top rated Movies"
-            android:layout_margin="8dp"
-            />
+            android:layout_height="match_parent">
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/topratedmovies"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#040929"
-            android:layout_marginVertical="8dp"
-            />
+            <LinearLayout
+                android:id="@+id/home_body"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/now_playing_movie"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:orientation="horizontal"
+                    app:reverseLayout="false"
+                    tools:listitem="@layout/nowplaying_movie"
+                    android:layout_marginVertical="8dp" />
 
 
+                <TextView
+                    android:id="@+id/upcoming_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:text="Up Coming Movies"
+                    android:layout_margin="8dp" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/upcoming_rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:orientation="horizontal"
+                    app:reverseLayout="false"
+                    tools:listitem="@layout/movie_item"
+                    android:layout_marginVertical="8dp" />
+
+                <TextView
+                    android:id="@+id/popular_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:text="Popular Movies"
+                    android:layout_margin="8dp" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/popularmovies"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:orientation="horizontal"
+                    app:reverseLayout="false"
+                    tools:listitem="@layout/movie_item"
+                    android:layout_marginVertical="8dp" />
+
+                <TextView
+                    android:id="@+id/toprated_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:text="Top rated Movies"
+                    android:layout_margin="8dp" />
 
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/topratedmovies"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:orientation="horizontal"
+                    app:reverseLayout="false"
+                    tools:listitem="@layout/movie_item"
+                    android:layout_marginVertical="8dp" />
 
-    </LinearLayout>
+
+            </LinearLayout>
+
+        </ScrollView>
 
 
-
-</ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
