--- a/app/src/main/res/layout/nowplaying_movie.xml
+++ b/app/src/main/res/layout/nowplaying_movie.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     app:cardCornerRadius="8dp"
     android:layout_margin="8dp"
-    android:layout_height="wrap_content">
+    android:layout_height="220dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,10 +15,12 @@
         <ImageView
             android:id="@+id/now_playing_movieImage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginHorizontal="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="24dp"
+            android:scaleType="centerCrop"
+            tools:src="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -27,9 +29,11 @@
         <ImageView
             android:id="@+id/poster"
             android:layout_width="125dp"
-            android:layout_height="wrap_content"
+            android:layout_height="170dp"
             android:layout_marginBottom="4dp"
             android:layout_marginEnd="24dp"
+            tools:src="@drawable/ic_launcher_foreground"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
 
